 * fix displaying cfdef entries for super columnfamilies (CASSANDRA-3415)
 * Make counter shard merging thread safe (CASSANDRA-3178, -3514)
 * Fix bug preventing the use of efficient cross-DC writes (CASSANDRA-3472)
 * (Hadoop) skip empty rows when entire row is requested, redux (CASSANDRA-2855)
 * fix concurrence issue in the FailureDetector (CASSANDRA-3519)


0.8.7
 * Kill server on wrapped OOME such as from FileChannel.map (CASSANDRA-3201)
 * Allow using quotes in "USE <keyspace>;" CLI command (CASSANDRA-3208)
 * Log message when a full repair operation completes (CASSANDRA-3207)
 * Don't allow any cache loading exceptions to halt startup (CASSANDRA-3218)
 * Fix sstableloader --ignores option (CASSANDRA-3247)
 * File descriptor limit increased in packaging (CASSANDRA-3206)
 * Log a meaningfull warning when a node receive a message for a repair session
   that doesn't exist anymore (CASSANDRA-3256)
 * Fix FD leak when internode encryption is enabled (CASSANDRA-3257)
 * FBUtilities.hexToBytes(String) to throw NumberFormatException when string
   contains non-hex characters (CASSANDRA-3231)
 * Keep SimpleSnitch proximity ordering unchanged from what the Strategy
   generates, as intended (CASSANDRA-3262)
 * remove Scrub from compactionstats when finished (CASSANDRA-3255)
 * Fix tool .bat files when CASSANDRA_HOME contains spaces (CASSANDRA-3258)
 * Evict gossip state immediately when a token is taken over by a new IP 
   (CASSANDRA-3259)
 * (Hadoop) allow wrapping ranges in queries (CASSANDRA-3137)
 * (Hadoop) check all interfaces for a match with split location
   before falling back to random replica (CASSANDRA-3211)
 * Fix bug where the failure detector can take too long to mark a host 
   down (CASSANDRA-3273)
 * Fix stress COUNTER_GET option (CASSANDRA-3301)
 * Nodetool no longer leaks threads and closes JMX connections (CASSANDRA-3309)
 * Fix exception during PIG 'dump' (CASSANDRA-2810)
 * Fix transposition in cfHistograms (CASSANDRA-3222)