@@ -273,7 +273,7 @@ public class StorageProxy implements StorageProxyMBean
                 {
                     if (!target.equals(destination))
                     {
-                        addHintHeader(hintedMessage, target);
+                        hintedMessage = addHintHeader(hintedMessage, target);
                         if (logger.isDebugEnabled())
                             logger.debug("insert writing key " + ByteBufferUtil.bytesToHex(rm.key()) + " to " + destination + " for " + target);
                     }
@@ -304,7 +304,7 @@ public class StorageProxy implements StorageProxyMBean
                 Message message = messages.getKey();
                 // a single message object is used for unhinted writes, so clean out any forwards
                 // from previous loop iterations
-                message.removeHeader(RowMutation.FORWARD_HEADER);
+                message = message.withHeaderRemoved(RowMutation.FORWARD_HEADER);
 
                 if (dataCenter.equals(localDataCenter))
                 {
@@ -318,21 +318,14 @@ public class StorageProxy implements StorageProxyMBean
                     Iterator<InetAddress> iter = messages.getValue().iterator();
                     InetAddress target = iter.next();
                     // Add all the other destinations of the same message as a header in the primary message.
+                    ByteArrayOutputStream bos = new ByteArrayOutputStream();
+                    DataOutputStream dos = new DataOutputStream(bos);
                     while (iter.hasNext())
                     {
                         InetAddress destination = iter.next();
-                        // group all nodes in this DC as forward headers on the primary message
-                        ByteArrayOutputStream bos = new ByteArrayOutputStream();
-                        DataOutputStream dos = new DataOutputStream(bos);
-
-                        // append to older addresses
-                        byte[] previousHints = message.getHeader(RowMutation.FORWARD_HEADER);
-                        if (previousHints != null)
-                            dos.write(previousHints);
-
                         dos.write(destination.getAddress());
-                        message.setHeader(RowMutation.FORWARD_HEADER, bos.toByteArray());
                     }
+                    message = message.withHeaderAdded(RowMutation.FORWARD_HEADER, bos.toByteArray());
                     // send the combined message + forward headers
                     MessagingService.instance().sendRR(message, target, handler);
                 }
@@ -340,7 +333,7 @@ public class StorageProxy implements StorageProxyMBean
         }
     }
 
-    private static void addHintHeader(Message message, InetAddress target) throws IOException
+    private static Message addHintHeader(Message message, InetAddress target) throws IOException
     {
         ByteArrayOutputStream bos = new ByteArrayOutputStream();
         DataOutputStream dos = new DataOutputStream(bos);
@@ -350,7 +343,7 @@ public class StorageProxy implements StorageProxyMBean
             dos.write(previousHints);
         }
         ByteBufferUtil.writeWithShortLength(ByteBufferUtil.bytes(target.getHostAddress()), dos);
-        message.setHeader(RowMutation.HINT, bos.toByteArray());
+        return message.withHeaderAdded(RowMutation.HINT, bos.toByteArray());
     }
 
     private static void insertLocal(final RowMutation rm, final IWriteResponseHandler responseHandler)
